edit always base docs, another fix for the jumping footer

--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -825,6 +825,7 @@ html[data-theme="dark"] div[class^="tableOfContents"] {
 
   img[class^="themedImage"] {
     display: initial !important;
+    height: 54px;
   }
 }
 
